--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@
     --text-hover-color : #000 ; 
     --light-accent-color : #ccc ; 
     --accent-color :#abbaab; 
-    --blue-color :#87aa88;
+    --blue-color :#2980b9;
 }
 
 @keyframes name {
@@ -337,5 +337,15 @@ footer {
 
 
 #go-back-button{
+    font-family: "roboto mono";
+    outline : none; 
+    background-color: var(--blue-color);
+    position: relative;
+    top:-2em;
+    color:#fafafa;
+    padding: 1em;
+    border:none;
     display: none; 
+    border-radius: 10px;
+    font-size: 0.8em;
 } 
