fixed position of header in responsive mode

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,10 @@
         font-size: 1.5em ;
         white-space: pre;
     }
+    body {
+        position: relative;
+        top:-4em;
+    }
 
 
 }
