--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,6 +9,40 @@
         position: relative;
         top:-4em;
     }
+    #projects-wrapper {
+       width: 98%;
+       text-align: center;
+    }
+    #projects-wrapper div {
+        align-items: center !important ;
+        flex-direction: column;
+        margin: 0em 0em 1em 0em !important;
+        width: 97% important;
+        
+    }
+    #projects-wrapper img {
+        box-shadow: 0px 0px 0px 0px !important;
+        border-radius: 5px !important;
+        padding: 1em;
+        margin: 0 !important;
+    }
+    #projects-wrapper > div > div {
+        padding-right: 0px !important;
+    }
+    #projects-wrapper a {
+        font-size: 1.3em ;
+    }
+    .tags {
+        text-align: center ;
+        justify-content: center;
+        display: flex ; 
+        flex-direction: row !important;
+        flex-wrap: wrap ;
+    }
+    .tags span {
+        border:1px solid ; 
+        margin-bottom: 0.4em;
+    }
 
 
 }
