--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@
 }
 
 * {
-    font-family: "poppins";
+    font-family: "poppins","helvetica","arial";
 }
 html {
     background-color: var(--background-color);
