--- a/css/index.css
+++ b/css/index.css
@@ -112,13 +112,31 @@ body {
     color:var(--text-color);
     width:75%; 
     margin :5em auto ; 
-    background-color: var(--background-color);
+    background-color: transparent;
 }
 
 a { 
     color : inherit;
     text-decoration: none;
 }
+section {
+    border-radius: 1em;
+    padding: 1em;
+    background-color: var(--background-color);
+}
+#watermark {
+    position: fixed;
+    margin: 0em auto ;
+    font-size: 27em;
+    font-weight: bolder;
+    font-family: nunito ;
+    opacity: 0.03;
+    right: auto;
+    left:auto;
+    transform: rotate(-353deg);
+    z-index: -1000;
+}
+
 #name {
     animation-name: name;
     font-weight: bold;
@@ -234,7 +252,7 @@ article > section > ul {
 }
 
 #projects-wrapper > div {
-    background-color: inherit;
+    background-color: var(--background-color);
     padding: 0 1em ;
     box-shadow: 0px 0px 5px 3px var(--light-accent-color);
     display: flex;
