--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,7 +17,6 @@
         margin-top: 0px !important;
     }
     body {
-
         position: relative;
         width:85% !important; 
     }
@@ -68,6 +67,7 @@
         border:1px solid ; 
         margin-bottom: 0.4em;
     }
-
-
+    .watermark:nth-child(2){
+        bottom:3em ;    
+    }
 }
